--- a/MIPGen/MIPGen.vcxproj.filters
+++ b/MIPGen/MIPGen.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClInclude Include="MIPGen.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Common\d3d12.h">
+      <Filter>Common\Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Common\DXFramework.cpp">
