Fix barrier executions.

--- a/MIPGen/MIPGen.vcxproj.filters
+++ b/MIPGen/MIPGen.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClInclude Include="Common\d3d12.h">
       <Filter>Common\Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="XUSG\Core\XUSG.h">
+      <Filter>XUSG\Core</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Common\DXFramework.cpp">
