--- a/MIPGen/MIPGen.vcxproj.filters
+++ b/MIPGen/MIPGen.vcxproj.filters
@@ -98,6 +98,9 @@
     <ClCompile Include="MIPGen.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Common\stb_image_write.cpp">
+      <Filter>Common\Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Content\Shaders\D3DX_DXGIFormatConvert.inl">
